--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
         /* 現在地へ戻るボタン (地図上にフロート表示) */
         #btn-center {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
+            position: relative;
+            bottom: 0px;
+            right: 0px;
             z-index: 999; /* Leafletの上に表示 */
             width: 50px;
             height: 50px;
@@ -284,3 +284,4 @@
     </script>
 </body>
 </html>
+
